# datafusion-fiddle

./: .gitignore  .vercelignore  Cargo.toml  LICENSE  README.md  index.html  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json  vite.config.js
api/: main.rs
api/parquet/customer/: 1.parquet  10.parquet  11.parquet  12.parquet  13.parquet  14.parquet  15.parquet  16.parquet  2.parquet  3.parquet  4.parquet  5.parquet  6.parquet  7.parquet  8.parquet  9.parquet
api/parquet/flights_1m/: part-0.parquet
api/parquet/house_prices/: part-0.parquet
api/parquet/iris_flower/: part-0.parquet
api/parquet/lineitem/: 1.parquet  10.parquet  11.parquet  12.parquet  13.parquet  14.parquet  15.parquet  16.parquet  2.parquet  3.parquet  4.parquet  5.parquet  6.parquet  7.parquet  8.parquet  9.parquet
api/parquet/motor_trend/: part-0.parquet
api/parquet/nation/: 3.parquet
api/parquet/orders/: 1.parquet  10.parquet  11.parquet  12.parquet  13.parquet  14.parquet  15.parquet  16.parquet  2.parquet  3.parquet  4.parquet  5.parquet  6.parquet  7.parquet  8.parquet  9.parquet
api/parquet/part/: 1.parquet  10.parquet  11.parquet  12.parquet  13.parquet  14.parquet  15.parquet  16.parquet  2.parquet  3.parquet  4.parquet  5.parquet  6.parquet  7.parquet  8.parquet  9.parquet
api/parquet/partsupp/: 1.parquet  10.parquet  11.parquet  12.parquet  13.parquet  14.parquet  15.parquet  16.parquet  2.parquet  3.parquet  4.parquet  5.parquet  6.parquet  7.parquet  8.parquet  9.parquet
api/parquet/region/: 7.parquet
api/parquet/supplier/: 1.parquet  10.parquet  11.parquet  12.parquet  13.parquet  14.parquet  15.parquet  16.parquet  2.parquet  3.parquet  4.parquet  5.parquet  6.parquet  7.parquet  8.parquet  9.parquet
api/parquet/weather/: part-0.parquet
app/: ResultVisualizer.tsx  SqlEditor.tsx  api.ts  constants.ts  layout.tsx  page.tsx  useScreenWidth.ts
components/: DataFusionIcon.tsx  DataFusionVersion.tsx  DistributedToggle.tsx  DragHandle.tsx  GithubIcon.tsx  GithubLink.tsx  LoadingSpinner.tsx  PlayButton.tsx  ShareButton.css  ShareButton.tsx  ShortcutsButton.tsx  ShortcutsModal.tsx  VimButton.tsx
src/: App.tsx  ResultVisualizer.tsx  SqlEditor.tsx  SqlEditorVimMode.tsx  TablesContext.tsx  TablesExplorer.tsx  api.ts  constants.ts  index.css  main.tsx  useApi.ts  useApi.tsx  useLocalStorage.ts  useShortcuts.ts  useSubmit.ts  vite-env.d.ts
