[package]
name = "next-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"], default-features = false }
serde_json = { version = "1", features = ["raw_value"] }
# Documentation: https://docs.rs/vercel_runtime/latest/vercel_runtime
vercel_runtime = { version = "1.1.6" }
datafusion = { version = "51.0.0", default-features = false }
datafusion-distributed = { git = "https://github.com/datafusion-contrib/datafusion-distributed", rev = "bfd3e0b614202b3067de6cefb594f601eee8ea51" }
serde = { version = "1.0.203", features = ["derive"] }
futures = "0.3.31"
url = "2.5.7"
async-trait = "0.1.89"
tonic = { version="0.14", default-features = false }
tokio-stream = "0.1.17"
tower = { version = "0.5.2", default-features = false }
hyper-util = "0.1.16"
arrow-flight = { version = "57", default-features = false }

[dev-dependencies]
insta = "1.43.2"
tabled = "0.20.0"

# Optimize as much as possible even in debug mode, otherwise the binary size will be more than 50 Mb (vercel limit).
[profile.dev.package."*"]
opt-level = 3

# Each handler has to be specified as [[bin]]
[[bin]]
name = "sql"
path = "api/main.rs"
